--- a/index with circles.html
+++ b/index with circles.html
@@ -34,10 +34,10 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="p1.html">Product 1</a>
+            <a class="nav-link" href="indeed.html">Indeed</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="p2.html">Product 2</a>
+            <a class="nav-link" href="ziprecruiter">ZipRecruiter</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://dashboard.hrblaster.com">Sign Up</a>
@@ -58,12 +58,10 @@
         <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Get Started</a>
       </div>
     </div>
-
     <div class="bg-circle-1 bg-circle"></div>
     <div class="bg-circle-2 bg-circle"></div>
     <div class="bg-circle-3 bg-circle"></div>
     <div class="bg-circle-4 bg-circle"></div>
-
   </header>
 
   <section>
