Added Mockup again

--- a/indexv0.html
+++ b/indexv0.html
@@ -56,7 +56,6 @@
         <h1 class="masthead-heading mb-0">HR Blaster</h1>
         <h2 class="masthead-subheading mb-0">Boost Your Job's Exposure</h2>
         <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Get Started</a>
-        <img class="img-fluid square" src="img/dashboard.png" alt="">
       </div>
     </div>
 
@@ -127,23 +126,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-black">
     <div class="container">
-    	    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-6 order-lg-1">
-          <div class="p-5">
-            <h3 class="display-5" style="color:white;">Links Go Here</h3>
-            <p style="color:white;">HR Blaster boosts your job's organic reach.  Since all of the traffic is organic, this solution attracts real human applicants only.</p>
-          </div>
-        </div>
-        <div class="col-lg-6 order-lg-1">
-          <div class="p-5">
-            <h3 class="display-5" style="color:white;">More Links Here</h3>
-            <p style="color:white;">HR Blaster boosts your job's organic reach.  Since all of the traffic is organic, this solution attracts real human applicants only.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-      <p class="m-0 text-center text-white small">Copyright &copy; HR Blaster 2020</p>
+      <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2020</p>
     </div>
     <!-- /.container -->
   </footer>
