Loading New LEarning Files

--- a/index.html
+++ b/index.html
@@ -27,23 +27,17 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">HR Blaster</a>
+      <a class="navbar-brand" href="#">Start Bootstrap</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="p1.html">Product 1</a>
+            <a class="nav-link" href="#">Sign Up</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="p2.html">Product 2</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://dashboard.hrblaster.com">Sign Up</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://dashboard.hrblaster.com">Log In</a>
+            <a class="nav-link" href="#">Log In</a>
           </li>
         </ul>
       </div>
@@ -53,18 +47,15 @@
   <header class="masthead text-center text-white">
     <div class="masthead-content">
       <div class="container">
-        <h1 class="masthead-heading mb-0">HR Blaster</h1>
-        <h2 class="masthead-subheading mb-0">Boost Your Job's Exposure</h2>
-        <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Get Started</a>
-        <img class="img-fluid square" src="img/browsermockup.png" alt="">
+        <h1 class="masthead-heading mb-0">One Page Wonder</h1>
+        <h2 class="masthead-subheading mb-0">Will Rock Your Socks Off</h2>
+        <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Learn More</a>
       </div>
     </div>
-
     <div class="bg-circle-1 bg-circle"></div>
     <div class="bg-circle-2 bg-circle"></div>
     <div class="bg-circle-3 bg-circle"></div>
     <div class="bg-circle-4 bg-circle"></div>
-
   </header>
 
   <section>
@@ -77,9 +68,8 @@
         </div>
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
-            <h2 class="display-4">Simple to Use</h2>
-            <p>HR Blaster integrates into all of the most popular job posting platforms. Our dashboard is designed with the user in mind and is easy to use.  No tech or training required.  Simply load your existing job postings and we'll take care of the rest!</p>
-            <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Get Started</a>
+            <h2 class="display-4">For those about to rock...</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
           </div>
         </div>
       </div>
@@ -96,9 +86,8 @@
         </div>
         <div class="col-lg-6">
           <div class="p-5">
-            <h2 class="display-4">Pay As You Go</h2>
-            <p>Our dashboard functions using credits, so you only pay for what you need. This means that HR Blaster can tailor to all organizations regardless of size. There are no contracts or commitments, you're free to spend as much or as little as you need!</p>
-            <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Get Started</a>
+            <h2 class="display-4">We salute you!</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
           </div>
         </div>
       </div>
@@ -115,49 +104,8 @@
         </div>
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
-            <h2 class="display-4">High Quality Traffic</h2>
-            <p>HR Blaster boosts your job's existing organic reach. We don't use spammy advertising networks that deliver bot or foreign traffic. Our solution is designed to provide you with relevant and human applicants!</p>
-            <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Get Started</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Pricing Section -->
-    <section>
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-6 order-lg-2">
-<div class="container py-5">
-  <div class="row">
-    <div class="col-md-12 col-sm-6">
-      <div class="card bg-black border-0 rounded-0 shadow">
-        <div class="card-header text-center text-white border-0">
-          <h2><strong>PREMIUM</strong></h2>
-          <p>LOREM IPSUM DOLOR SIT</p>
-          <i class="fa fa-star text-warning mr-2"></i>
-          <i class="fa fa-star text-warning"></i></div>
-        <div class="card-body bg-white">
-          <ul class="list-unstyled">
-            <li class="mb-4"><i class="fa fa-lg fa-check-circle text-warning mr-2"></i> <strong>Unlimited</strong> Email Addresses</li>
-            <li class="mb-4"><i class="fa fa-lg fa-check-circle text-warning mr-2"></i> <strong>80 GB</strong> Disk Space</li>
-            <li class="mb-4"><i class="fa fa-lg fa-check-circle text-warning mr-2"></i> <strong>Unlimited</strong> MySQL Database</li>
-            <li class="mb-4"><i class="fa fa-lg fa-check-circle text-warning mr-2"></i> 24X7 Support</li>
-            <li class="mb-4"><i class="fa fa-lg fa-times-circle text-secondary mr-2"></i> Email Support</li>
-          </ul>
-          <p class="text-center font-weight-bolder text-dark h1 display-4 mb-0">$1</p>
-          <p class="small text-center font-weight-bolder text-secondary">per submission</p>
-          <a href="#" class="btn btn-block bg-black text-white">BOOST NOW</a></div>
-      </div>
-    </div>
-  </div>
-</div>
-        </div>
-        <div class="col-lg-6 order-lg-1">
-          <div class="p-5">
-            <h2 class="display-4">High Quality Traffic</h2>
-            <p>HR Blaster boosts your job's existing organic reach. We don't use spammy advertising networks that deliver bot or foreign traffic. Our solution is designed to provide you with relevant and human applicants!</p>
+            <h2 class="display-4">Let there be rock!</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
           </div>
         </div>
       </div>
@@ -167,29 +115,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-black">
     <div class="container">
-    	    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-6 order-lg-1">
-          <div class="p-5">
-            <h3 class="display-5" style="color:white;">Links Go Here</h3>
-            <ul>
-              <li><a href="/tos" style="color:white;">Terms of Service</a></li>
-              <li><a href="/pp" style="color:white;">Privacy Policy</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-6 order-lg-1">
-          <div class="p-5">
-            <h3 class="display-5" style="color:white;">More Links Here</h3>
-            <ul>
-              <li><a href="/tos" style="color:white;">Link 1</a></li>
-              <li><a href="/pp" style="color:white;">Link 2</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-      <p class="m-0 text-center text-white small">Copyright &copy; HR Blaster 2020</p>
+      <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2020</p>
     </div>
     <!-- /.container -->
   </footer>
